# ppt_speaking_notes_agent

./: .env.example  .gitignore  README.md  World-Bank-Evolution-Speaker-Notes.csv  pyproject.toml  requirements.txt  test_speaking_notes.ipynb
noteagent/: speaker.py
